# tawla-lang

./: .gitignore  LICENSE  README.md  pyinstaller_entry.py  pyproject.toml  tawlac.spec
docs/: PUBLISHING.md
examples/: abstract.twl  animals.twl  arrays.twl  branch.twl  collections_demo.twl  encapsulation.twl  ergonomics.twl  errors.twl  essentials.twl  factorial.twl  fetch.twl  floats.twl  forloop.twl  gc.twl  generics.twl  hello.twl  hello_main.twl  increment.twl  input.twl  interfaces.twl  json_read.twl  json_write.twl  logic.twl  loop.twl  math.twl  nullable.twl  point.twl  rest_api.twl  server.twl  shapes.twl  smoke.twl  sql_demo.twl  strings.twl  strings_util.twl  super.twl  ternary.twl  types.twl
scripts/: release.py
tawla/: __init__.py  __main__.py  ast_nodes.py  cli.py  codegen.py  compiler.py  eh_runtime.py  fetch_runtime.py  gc_runtime.py  http_runtime.py  io_runtime.py  lexer.py  loader.py  monomorphize.py  parser.py  project.py  sema.py  sqlite_runtime.py  str_runtime.py  sys_runtime.py  tojson.py  tokens.py
tawla/stdlib/: Fs.twl  (+7 more)
tests/: conftest.py  test_cli.py  test_eh_runtime.py  test_m1.py  test_m10.py  test_m11.py  test_m12.py  test_m13.py  test_m15.py  test_m16.py  test_m17.py  test_m18.py  test_m19.py  test_m2.py  test_m20.py  test_m21.py  test_m22.py  test_m23.py  test_m24.py  test_m25.py  test_m26.py  test_m27.py  test_m28.py  test_m29.py  test_m3.py  test_m30.py  test_m31.py  test_m32.py  test_m33.py  test_m34.py  test_m35.py  test_m36.py  test_m37.py  test_m38.py  test_m39.py  test_m4.py  test_m40.py  test_m5.py  test_m6.py  test_m7.py  (+5 more)
(+38 files in other folders)
