[project]
name = "tawla"
version = "0.1.2"
description = "The Tawla programming language and its tawlac compiler"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ahmed Haddaji", email = "ahmedhaddajiahmed@gmail.com" }]
dependencies = ["llvmlite>=0.44"]
keywords = ["compiler", "programming-language", "llvm", "tawla"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Compilers",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/HaddajiDev/tawla-lang"
Repository = "https://github.com/HaddajiDev/tawla-lang"

[project.scripts]
tawlac = "tawla.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tawla"]
